fix error page overflow

--- a/src/components/Error/error.scss
+++ b/src/components/Error/error.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   &__ctn {
     width: 350px;
     text-align: center;
